Fix page overlap by header

--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -17,7 +17,7 @@ body
       overflow: hidden
 
     .app-container
-      margin-top: 55px !important
+      margin-top: 95px !important
 
     .navbar-brand
       margin-left: -15px
